<resources>
    <string name="app_name">Study Squad</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="change_email">Change Email</string>
    <string name="log_out">Log Out</string>
    <string name="action_chat">Chat</string>
    <string name="favorite">Favorite</string>
    <string name="description">Description</string>
    <string name="languages">Languages</string>
    <string name="last_updated">Last updated</string>
    <string name="hours">Hours</string>
    <string name="locations">Locations</string>
    <string name="get_directions">Get directions</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="office_name">Office</string>
    <string name="location">Location</string>
    <string name="favorites">  Favorites</string>
    <string name="chat">  Chat History</string>

    <string name="username">Username</string>
    <string name="chat1">Study Group</string>
    <string name="chat2">Best Friends</string>
    <string name="gps_network_not_enabled">For best results, please enable Location Services on your device.</string>
    <string name="open_location_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="network_not_enabled">Connect to a Wifi or Data Network for access to nearby Education centers.</string>
    <string name="action_mapview">Map View</string>
    <string name="marker_snippet">Click here for more info</string>
    <string name="action_listview">List View</string>
    <string name="enter_email">Enter new email address:</string>
    <string name="save">Save</string>
    <string name="friends">Friends</string>
    <string name="must_log_in">Please log in to access chat function.</string>
    <string name="log_in">Log In</string>


    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="zipcode">Zipcode</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="facebook_app_id">1458548884470272</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Enter password</string>
    <string name="agency_address">Address</string>
    <string name="agency_email">email</string>
    <string name="agency_website">website</string>
    <string name="agency_facebook">Facebook</string>
    <string name="agency_twitter">Twitter</string>
</resources>
