<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hackaccess.c4q.nyc.educationapp.profile.LoginFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/userLoginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/submit"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
